--- a/MCMC method.ipynb
+++ b/MCMC method.ipynb
@@ -36,7 +36,7 @@
     "# 对现在用的SHM-Data来说够了，改大了就是徒增计算量\n",
     "tof_widths = 101\n",
     "\n",
-    "# 板子的大小\n",
+    "# CF/RP板材的大小(mm)\n",
     "# 没啥用，哈哈哈\n",
     "plant_size = [500, 500]\n",
     "\n",
@@ -117,7 +117,7 @@
     "        dmt_data_list[i] = def_tof(dmt_catch, i)\n",
     "    dmt_data_result = np.zeros((12, 12))\n",
     "    dmt_data_point = 0\n",
-    "    for i in range(0, 12)\n",
+    "    for i in range(0, 12):\n",
     "        for j in range(i + 1, 12):\n",
     "            dmt_data_result[i][j] = dmt_data_list[dmt_data_point]\n",
     "            dmt_data_result[j][i] = dmt_data_list[dmt_data_point]\n",
@@ -148,25 +148,10 @@
     "    fuc_p_x2 = fuc_p_theta2[0]\n",
     "    fuc_p_y2 = fuc_p_theta2[1]\n",
     "    fuc_p_v2 = fuc_p_theta2[2]\n",
-    "    fuc_p1 = stats.norm.pdf(fuc_p_x1, def_p_x, scale=def_p_x_scale) * stats.norm.pdf(fuc_p_y1, def_p_y, scale=def_p_y_scale) * stats.norm.pdf(fuc_p_v1, def_p_v, scale=def_p_v_scale)\n",
-    "    fuc_p2 = stats.norm.pdf(fuc_p_x2, def_p_x, scale=def_p_x_scale) * stats.norm.pdf(fuc_p_y2, def_p_y, scale=def_p_y_scale) * stats.norm.pdf(fuc_p_v2, def_p_v, scale=def_p_v_scale)\n",
-    "    fuc_pp = fuc_p1 / fuc_p2\n",
+    "    fuc_pp1 = stats.norm.pdf(fuc_p_x1, def_p_x, scale=def_p_x_scale) * stats.norm.pdf(fuc_p_y1, def_p_y, scale=def_p_y_scale) * stats.norm.pdf(fuc_p_v1, def_p_v, scale=def_p_v_scale)\n",
+    "    fuc_pp2 = stats.norm.pdf(fuc_p_x2, def_p_x, scale=def_p_x_scale) * stats.norm.pdf(fuc_p_y2, def_p_y, scale=def_p_y_scale) * stats.norm.pdf(fuc_p_v2, def_p_v, scale=def_p_v_scale)\n",
+    "    fuc_pp = fuc_pp1 / fuc_pp2\n",
     "    return min(1, fuc_pp)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# 先验概率密度函数之比，但用的RAPID\n",
-    "def fuc_p2(fuc_p2_theta1, fuc_p2_theta2):"
    ],
    "metadata": {
     "collapsed": false,
