--- a/MCMC method with RAPID.ipynb
+++ b/MCMC method with RAPID.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 182,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 183,
    "outputs": [],
    "source": [
     "# 一些全局变量，放在这里好设置\n",
@@ -60,7 +60,7 @@
     "\n",
     "# MCMC总运行次数\n",
     "# 越大越准，越大计算越慢\n",
-    "NT = 10000\n",
+    "NT = 1000\n",
     "\n",
     "# MCMC老化时间\n",
     "# 只要你NT设置的足够大，老化时间是可以忽略的，可惜我懒得等计算\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 184,
    "outputs": [],
    "source": [
     "# 使用连续小波变换获取ToF时间\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 185,
    "outputs": [],
    "source": [
     "def def_get_array(def_get_locate):\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 186,
    "outputs": [],
    "source": [
     "# 对所有catch信号获取ToF时间，返回选中的几组\n",
@@ -166,15 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 187,
    "outputs": [],
    "source": [
-    "def def_dr(def_rd_select, def_rd_x, def_rd_y):\n",
+    "def def_rd(def_rd_select, def_rd_x, def_rd_y):\n",
     "    def_rd_xi = sensor_locate[def_rd_select[0]][0]\n",
     "    def_rd_yi = sensor_locate[def_rd_select[0]][1]\n",
     "    def_rd_xj = sensor_locate[def_rd_select[1]][0]\n",
     "    def_rd_yj = sensor_locate[def_rd_select[1]][1]\n",
-    "    def_dr_xy = (np.sprt(np.square(def_rd_x - def_rd_xi) + np.square(def_rd_y - def_rd_yi)) + np.sprt(np.square(def_rd_x - def_rd_xj) + np.square(def_rd_y - def_rd_yj))) / np.sprt(np.square(def_rd_xi - def_rd_xj) + np.square(def_rd_yi - def_rd_yj))\n",
+    "    def_dr_xy = (np.sqrt(np.square(def_rd_x - def_rd_xi) + np.square(def_rd_y - def_rd_yi)) + np.sqrt(np.square(def_rd_x - def_rd_xj) + np.square(def_rd_y - def_rd_yj))) / np.sqrt(np.square(def_rd_xi - def_rd_xj) + np.square(def_rd_yi - def_rd_yj))\n",
     "    return def_dr_xy"
    ],
    "metadata": {
@@ -186,11 +186,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 188,
    "outputs": [],
    "source": [
     "def def_ri(def_ri_select, def_ri_x, def_ri_y):\n",
-    "    def_ri_ri = def_dr(def_ri_select, def_ri_x, def_ri_y)\n",
+    "    def_ri_ri = def_rd(def_ri_select, def_ri_x, def_ri_y)\n",
     "    if def_ri_ri >= beta:\n",
     "        return beta\n",
     "    else:\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 189,
    "outputs": [],
    "source": [
     "def def_cxy(def_cxy_dmg, def_cxy_baseline):\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "outputs": [],
    "source": [
     "def def_sigma(def_sigma_dmg, def_sigma_baseline):\n",
@@ -247,17 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (2443811328.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  Input \u001B[1;32mIn [86]\u001B[1;36m\u001B[0m\n\u001B[1;33m    def def_aij(def_aij_select):\u001B[0m\n\u001B[1;37m                                ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "execution_count": 191,
+   "outputs": [],
    "source": [
     "def def_aij(def_aij_dmg, def_aij_baseline):\n",
     "    rho = def_cxy(def_aij_dmg, def_aij_baseline) - def_sigma(def_aij_dmg, def_aij_baseline)\n",
@@ -272,11 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "outputs": [],
    "source": [
-    "def fuc_rapid_pdf(fuc_p_array, fuc_rapid_pdf_x, fuc_rapid_pdf_y):\n",
-    "    fuc_rapid_pdf_pdf = np.zeros(plant_size)\n"
+    "def fuc_rapid_pdf2(fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select):\n",
+    "    fuc_rapid_pdf2_pdf = np.zeros(plant_size)\n",
+    "    fuc_rapid_pdf2_dmg = fuc_rapid_pdf2_array[int(fuc_rapid_pdf2_num), :]\n",
+    "    fuc_rapid_pdf2_baseline = SHM_Data_baseline[int(fuc_rapid_pdf2_num), :]\n",
+    "    for i in range(np.size(fuc_rapid_pdf2_pdf, 0)):\n",
+    "        for j in range(np.size(fuc_rapid_pdf2_pdf, 1)):\n",
+    "            fuc_rapid_pdf2_pdf[i][j] = def_aij(fuc_rapid_pdf2_dmg, fuc_rapid_pdf2_baseline) * (beta - def_ri(fuc_rapid_pdf2_select, i, j)) / (beta - 1)\n",
+    "    return fuc_rapid_pdf2_pdf"
    ],
    "metadata": {
     "collapsed": false,
@@ -287,21 +284,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
+   "outputs": [],
+   "source": [
+    "def fuc_rapid_pdf(fuc_rapid_pdf_array):\n",
+    "    fuc_rapid_pdf_pdf = np.zeros(plant_size)\n",
+    "    fuc_p_array_count = 0\n",
+    "    fuc_p_array_select = np.zeros((12, 12))\n",
+    "    for i in range(0, 12):\n",
+    "        for j in range(i + 1, 12):\n",
+    "            fuc_p_array_select[i][j] = fuc_p_array_count\n",
+    "            fuc_p_array_select[j][i] = fuc_p_array_count\n",
+    "            fuc_p_array_count += 1\n",
+    "    for i in range(np.size(select, 0)):\n",
+    "        fuc_rapid_pdf_pdf += fuc_rapid_pdf2(fuc_rapid_pdf_array, fuc_p_array_select[select[i][0]][select[i][1]], select[i])\n",
+    "    return fuc_p_array_select"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
    "outputs": [],
    "source": [
     "# 先验概率密度函数之比\n",
-    "def fuc_p(fuc_p_array, fuc_p_theta1, fuc_p_theta2):\n",
+    "def fuc_p(fuc_p_pdf_pdf, fuc_p_theta1, fuc_p_theta2):\n",
     "    fuc_p_x1 = fuc_p_theta1[0]\n",
     "    fuc_p_y1 = fuc_p_theta1[1]\n",
     "    fuc_p_x2 = fuc_p_theta2[0]\n",
     "    fuc_p_y2 = fuc_p_theta2[1]\n",
-    "\n",
-    "\n",
-    "\n",
-    "    #fuc_pp = fuc_pp1 / fuc_pp2\n",
-    "    #return min(1, fuc_pp)\n",
-    "    return 0.99"
+    "    fuc_p1 = fuc_p_pdf_pdf[fuc_p_x1][fuc_p_y1]\n",
+    "    fuc_p2 = fuc_p_pdf_pdf[fuc_p_x2][fuc_p_y2]\n",
+    "    fuc_pp = fuc_p1 / fuc_p2\n",
+    "    return min(1, fuc_pp)"
    ],
    "metadata": {
     "collapsed": false,
@@ -312,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "outputs": [],
    "source": [
     "# 计算理论与实际的误差\n",
@@ -334,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "outputs": [],
    "source": [
     "# 返回符合逆伽马分布的随机数\n",
@@ -350,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "outputs": [],
    "source": [
     "# MCMC方法本体\n",
@@ -358,11 +378,13 @@
     "    def_theta = np.zeros((NT,2))\n",
     "    def_theta[0] = [250, 250]\n",
     "    LK = [1, 1]\n",
+    "    fuc_rapid_pdf_pdf = np.zeros(plant_size)\n",
+    "    fuc_rapid_pdf_pdf = fuc_rapid_pdf(def_mcmc_array)\n",
     "    for i in range(1, NT):\n",
     "        theta_1 = def_theta[i - 1][0] + 2 * LK[0] * (2 * random.random() - 1)\n",
     "        theta_2 = def_theta[i - 1][1] + 2 * LK[1] * (2 * random.random() - 1)\n",
     "        theta_k = [theta_1, def_theta[i - 1][1]]\n",
-    "        alpha = fuc_p(def_mcmc_array, theta_k, [def_theta[i - 1][0], def_theta[i - 1][1]])\n",
+    "        alpha = fuc_p(fuc_rapid_pdf_pdf, theta_k, [def_theta[i - 1][0], def_theta[i - 1][1]])\n",
     "        r = alpha * math.exp(-0.5 * fuc_ig(def_theta[i - 1], def_mcmc_tof) * (fuc_q(theta_k, def_mcmc_tof) - fuc_q([def_theta[i - 1][0], def_theta[i - 1][1]], def_mcmc_tof)))\n",
     "        R = random.random()\n",
     "        if R < r:\n",
@@ -372,7 +394,7 @@
     "            def_theta[i][0] = def_theta[i - 1][0]\n",
     "            LK[0] = LK[0] / 1.07\n",
     "        theta_k = [def_theta[i][0], theta_2]\n",
-    "        alpha = fuc_p(def_mcmc_array, theta_k, [def_theta[i][0], def_theta[i - 1][1]])\n",
+    "        alpha = fuc_p(fuc_rapid_pdf_pdf, theta_k, [def_theta[i][0], def_theta[i - 1][1]])\n",
     "        r = alpha * math.exp(-0.5 * fuc_ig(def_theta[i - 1], def_mcmc_tof) * (fuc_q(theta_k, def_mcmc_tof) - fuc_q([def_theta[i][0], def_theta[i - 1][1]], def_mcmc_tof)))\n",
     "        R = random.random()\n",
     "        if R < r:\n",
@@ -392,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "outputs": [],
    "source": [
     "# 制图函数，但是有点小问题\n",
@@ -442,7 +464,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [199]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      2\u001B[0m SHM_Data_baseline \u001B[38;5;241m=\u001B[39m def_get_array(SHM_Data_baseline_locate)\n\u001B[0;32m      4\u001B[0m tof, dmg_array \u001B[38;5;241m=\u001B[39m def_multi_tof(locate)\n\u001B[1;32m----> 5\u001B[0m theta \u001B[38;5;241m=\u001B[39m \u001B[43mdef_mcmc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdmg_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtof\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m def_plot_fig(theta, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[180, 345], [10, 10]\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "Input \u001B[1;32mIn [197]\u001B[0m, in \u001B[0;36mdef_mcmc\u001B[1;34m(def_mcmc_array, def_mcmc_tof)\u001B[0m\n\u001B[0;32m      5\u001B[0m LK \u001B[38;5;241m=\u001B[39m [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m      6\u001B[0m fuc_rapid_pdf_pdf \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros(plant_size)\n\u001B[1;32m----> 7\u001B[0m fuc_rapid_pdf_pdf \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_rapid_pdf\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdef_mcmc_array\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m1\u001B[39m, NT):\n\u001B[0;32m      9\u001B[0m     theta_1 \u001B[38;5;241m=\u001B[39m def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m LK[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m*\u001B[39m (\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom() \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n",
+      "Input \u001B[1;32mIn [193]\u001B[0m, in \u001B[0;36mfuc_rapid_pdf\u001B[1;34m(fuc_rapid_pdf_array)\u001B[0m\n\u001B[0;32m      9\u001B[0m         fuc_p_array_count \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(np\u001B[38;5;241m.\u001B[39msize(select, \u001B[38;5;241m0\u001B[39m)):\n\u001B[1;32m---> 11\u001B[0m     fuc_rapid_pdf_pdf \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[43mfuc_rapid_pdf2\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfuc_p_array_select\u001B[49m\u001B[43m[\u001B[49m\u001B[43mselect\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mselect\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mselect\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m fuc_p_array_select\n",
+      "Input \u001B[1;32mIn [192]\u001B[0m, in \u001B[0;36mfuc_rapid_pdf2\u001B[1;34m(fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select)\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(np\u001B[38;5;241m.\u001B[39msize(fuc_rapid_pdf2_pdf, \u001B[38;5;241m0\u001B[39m)):\n\u001B[0;32m      6\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(np\u001B[38;5;241m.\u001B[39msize(fuc_rapid_pdf2_pdf, \u001B[38;5;241m1\u001B[39m)):\n\u001B[1;32m----> 7\u001B[0m         fuc_rapid_pdf2_pdf[i][j] \u001B[38;5;241m=\u001B[39m \u001B[43mdef_aij\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf2_dmg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfuc_rapid_pdf2_baseline\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;241m*\u001B[39m (beta \u001B[38;5;241m-\u001B[39m def_ri(fuc_rapid_pdf2_select, i, j)) \u001B[38;5;241m/\u001B[39m (beta \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m fuc_rapid_pdf2_pdf\n",
+      "Input \u001B[1;32mIn [191]\u001B[0m, in \u001B[0;36mdef_aij\u001B[1;34m(def_aij_dmg, def_aij_baseline)\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdef_aij\u001B[39m(def_aij_dmg, def_aij_baseline):\n\u001B[1;32m----> 2\u001B[0m     rho \u001B[38;5;241m=\u001B[39m def_cxy(def_aij_dmg, def_aij_baseline) \u001B[38;5;241m-\u001B[39m \u001B[43mdef_sigma\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdef_aij_dmg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdef_aij_baseline\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;241m1\u001B[39m \u001B[38;5;241m-\u001B[39m rho\n",
+      "Input \u001B[1;32mIn [190]\u001B[0m, in \u001B[0;36mdef_sigma\u001B[1;34m(def_sigma_dmg, def_sigma_baseline)\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(def_sigma_dmg\u001B[38;5;241m.\u001B[39msize):\n\u001B[0;32m      7\u001B[0m     def_sigma_x \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msquare(def_sigma_dmg[i] \u001B[38;5;241m-\u001B[39m def_sigma_dmg_mean)\n\u001B[1;32m----> 8\u001B[0m     def_sigma_y \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msquare(\u001B[43mdef_sigma_baseline\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mdef_sigma_baseline_mean\u001B[49m)\n\u001B[0;32m      9\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m def_sigma_x \u001B[38;5;241m*\u001B[39m def_sigma_y\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "locate = \"20180605T150315_D9/pc_f100kHz.h5\"\n",
     "SHM_Data_baseline = def_get_array(SHM_Data_baseline_locate)\n",
@@ -455,13 +494,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "outputs": [],
    "source": [],
    "metadata": {
