--- a/MCMC method with RAPID.ipynb
+++ b/MCMC method with RAPID.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,7 +13,6 @@
    "source": [
     "import math\n",
     "import random\n",
-    "\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "# 一些全局变量，放在这里好设置\n",
@@ -89,12 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "# 使用连续小波变换获取ToF时间\n",
     "# 输入catch信号和频道，输出ToF时间\n",
     "def def_tof(def_tof_catch, def_tof_channel):\n",
+    "    print(\"def_tof\", def_tof_catch, def_tof_channel)\n",
     "    def_tof_data = def_tof_catch[()][def_tof_channel, :]\n",
     "    def_tof_widths = np.arange(1, tof_widths)\n",
     "    def_tof_data_cwt = signal.cwt(def_tof_data, signal.morlet2, def_tof_widths)\n",
@@ -115,10 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "def def_get_array(def_get_locate):\n",
+    "    print(\"def_get_array\", def_get_locate)\n",
     "    def_get_file = h5py.File(SHM_Data_Locate + def_get_locate, 'r')\n",
     "    def_get_catch = def_get_file['/pitchcatch/catch']\n",
     "    def_get_array1 = def_get_catch[()]\n",
@@ -133,11 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "# 对所有catch信号获取ToF时间，返回选中的几组\n",
     "def def_multi_tof(dmt_locate):\n",
+    "    print(\"def_multi_tof\", dmt_locate)\n",
     "    dmt_file = h5py.File(SHM_Data_Locate + dmt_locate, 'r')\n",
     "    dmt_catch = dmt_file['/pitchcatch/catch']\n",
     "    dmt_data_list = np.zeros((66,))\n",
@@ -166,10 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "def def_rd(def_rd_select, def_rd_x, def_rd_y):\n",
+    "    print(\"def_rd\", def_rd_select, def_rd_x, def_rd_y)\n",
     "    def_rd_xi = sensor_locate[def_rd_select[0]][0]\n",
     "    def_rd_yi = sensor_locate[def_rd_select[0]][1]\n",
     "    def_rd_xj = sensor_locate[def_rd_select[1]][0]\n",
@@ -186,10 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "def def_ri(def_ri_select, def_ri_x, def_ri_y):\n",
+    "    print(\"def_ri\", def_ri_select, def_ri_x, def_ri_y)\n",
     "    def_ri_ri = def_rd(def_ri_select, def_ri_x, def_ri_y)\n",
     "    if def_ri_ri >= beta:\n",
     "        return beta\n",
@@ -205,10 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "def def_cxy(def_cxy_dmg, def_cxy_baseline):\n",
+    "    print(\"def_cxy\", def_cxy_dmg, def_cxy_baseline)\n",
     "    def_cxy_dmg_mean = def_cxy_dmg.mean()\n",
     "    def_cxy_baseline_mean = def_cxy_baseline.mean()\n",
     "    def_cxy_count = 0\n",
@@ -225,10 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "def def_sigma(def_sigma_dmg, def_sigma_baseline):\n",
+    "    print(\"def_sigma\", def_sigma_dmg, def_sigma_baseline)\n",
     "    def_sigma_dmg_mean = def_sigma_dmg.mean()\n",
     "    def_sigma_baseline_mean = def_sigma_baseline.mean()\n",
     "    def_sigma_x = 0\n",
@@ -247,10 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "def def_aij(def_aij_dmg, def_aij_baseline):\n",
+    "    print(\"def_aij\", def_aij_dmg, def_aij_baseline)\n",
     "    rho = def_cxy(def_aij_dmg, def_aij_baseline) - def_sigma(def_aij_dmg, def_aij_baseline)\n",
     "    return 1 - rho"
    ],
@@ -263,10 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "def fuc_rapid_pdf2(fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select):\n",
+    "    print(\"fuc_rapid_pdf2\", fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select)\n",
     "    fuc_rapid_pdf2_pdf = np.zeros(plant_size)\n",
     "    fuc_rapid_pdf2_dmg = fuc_rapid_pdf2_array[int(fuc_rapid_pdf2_num), :]\n",
     "    fuc_rapid_pdf2_baseline = SHM_Data_baseline[int(fuc_rapid_pdf2_num), :]\n",
@@ -284,10 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 79,
    "outputs": [],
    "source": [
     "def fuc_rapid_pdf(fuc_rapid_pdf_array):\n",
+    "    print(\"fuc_rapid_pdf\", fuc_rapid_pdf_array)\n",
     "    fuc_rapid_pdf_pdf = np.zeros(plant_size)\n",
     "    fuc_p_array_count = 0\n",
     "    fuc_p_array_select = np.zeros((12, 12))\n",
@@ -298,7 +307,8 @@
     "            fuc_p_array_count += 1\n",
     "    for i in range(np.size(select, 0)):\n",
     "        fuc_rapid_pdf_pdf += fuc_rapid_pdf2(fuc_rapid_pdf_array, fuc_p_array_select[select[i][0]][select[i][1]], select[i])\n",
-    "    return fuc_p_array_select"
+    "    fuc_rapid_pdf_pdf = fuc_rapid_pdf_pdf / np.size(select, 0)\n",
+    "    return fuc_rapid_pdf_pdf"
    ],
    "metadata": {
     "collapsed": false,
@@ -309,11 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "# 先验概率密度函数之比\n",
     "def fuc_p(fuc_p_pdf_pdf, fuc_p_theta1, fuc_p_theta2):\n",
+    "    print(\"fuc_p\", fuc_p_pdf_pdf, fuc_p_theta1, fuc_p_theta2)\n",
     "    fuc_p_x1 = fuc_p_theta1[0]\n",
     "    fuc_p_y1 = fuc_p_theta1[1]\n",
     "    fuc_p_x2 = fuc_p_theta2[0]\n",
@@ -332,11 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "# 计算理论与实际的误差\n",
     "def fuc_q(fuc_q_theta, def_q_tof):\n",
+    "    print(\"fuc_q\", fuc_q_theta, def_q_tof)\n",
     "    xd = fuc_q_theta[0]\n",
     "    yd = fuc_q_theta[1]\n",
     "    count = 0\n",
@@ -354,11 +366,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 82,
    "outputs": [],
    "source": [
     "# 返回符合逆伽马分布的随机数\n",
     "def fuc_ig(fuc_ig_theta, def_ig_tof):\n",
+    "    print(\"fuc_ig\", fuc_ig_theta, def_ig_tof)\n",
     "    return invgamma.rvs(2.5, scale=(1 / fuc_q(fuc_ig_theta, def_ig_tof)))"
    ],
    "metadata": {
@@ -370,11 +383,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 83,
    "outputs": [],
    "source": [
     "# MCMC方法本体\n",
     "def def_mcmc(def_mcmc_array, def_mcmc_tof):\n",
+    "    print(\"def_mcmc\", def_mcmc_array, def_mcmc_tof)\n",
     "    def_theta = np.zeros((NT,2))\n",
     "    def_theta[0] = [250, 250]\n",
     "    LK = [1, 1]\n",
@@ -414,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 84,
    "outputs": [],
    "source": [
     "# 制图函数，但是有点小问题\n",
@@ -464,24 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [199]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      2\u001B[0m SHM_Data_baseline \u001B[38;5;241m=\u001B[39m def_get_array(SHM_Data_baseline_locate)\n\u001B[0;32m      4\u001B[0m tof, dmg_array \u001B[38;5;241m=\u001B[39m def_multi_tof(locate)\n\u001B[1;32m----> 5\u001B[0m theta \u001B[38;5;241m=\u001B[39m \u001B[43mdef_mcmc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdmg_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtof\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m def_plot_fig(theta, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[180, 345], [10, 10]\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "Input \u001B[1;32mIn [197]\u001B[0m, in \u001B[0;36mdef_mcmc\u001B[1;34m(def_mcmc_array, def_mcmc_tof)\u001B[0m\n\u001B[0;32m      5\u001B[0m LK \u001B[38;5;241m=\u001B[39m [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m      6\u001B[0m fuc_rapid_pdf_pdf \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros(plant_size)\n\u001B[1;32m----> 7\u001B[0m fuc_rapid_pdf_pdf \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_rapid_pdf\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdef_mcmc_array\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m1\u001B[39m, NT):\n\u001B[0;32m      9\u001B[0m     theta_1 \u001B[38;5;241m=\u001B[39m def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m LK[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m*\u001B[39m (\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom() \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n",
-      "Input \u001B[1;32mIn [193]\u001B[0m, in \u001B[0;36mfuc_rapid_pdf\u001B[1;34m(fuc_rapid_pdf_array)\u001B[0m\n\u001B[0;32m      9\u001B[0m         fuc_p_array_count \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(np\u001B[38;5;241m.\u001B[39msize(select, \u001B[38;5;241m0\u001B[39m)):\n\u001B[1;32m---> 11\u001B[0m     fuc_rapid_pdf_pdf \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[43mfuc_rapid_pdf2\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfuc_p_array_select\u001B[49m\u001B[43m[\u001B[49m\u001B[43mselect\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mselect\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mselect\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     12\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m fuc_p_array_select\n",
-      "Input \u001B[1;32mIn [192]\u001B[0m, in \u001B[0;36mfuc_rapid_pdf2\u001B[1;34m(fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select)\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(np\u001B[38;5;241m.\u001B[39msize(fuc_rapid_pdf2_pdf, \u001B[38;5;241m0\u001B[39m)):\n\u001B[0;32m      6\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(np\u001B[38;5;241m.\u001B[39msize(fuc_rapid_pdf2_pdf, \u001B[38;5;241m1\u001B[39m)):\n\u001B[1;32m----> 7\u001B[0m         fuc_rapid_pdf2_pdf[i][j] \u001B[38;5;241m=\u001B[39m \u001B[43mdef_aij\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf2_dmg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfuc_rapid_pdf2_baseline\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;241m*\u001B[39m (beta \u001B[38;5;241m-\u001B[39m def_ri(fuc_rapid_pdf2_select, i, j)) \u001B[38;5;241m/\u001B[39m (beta \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m fuc_rapid_pdf2_pdf\n",
-      "Input \u001B[1;32mIn [191]\u001B[0m, in \u001B[0;36mdef_aij\u001B[1;34m(def_aij_dmg, def_aij_baseline)\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdef_aij\u001B[39m(def_aij_dmg, def_aij_baseline):\n\u001B[1;32m----> 2\u001B[0m     rho \u001B[38;5;241m=\u001B[39m def_cxy(def_aij_dmg, def_aij_baseline) \u001B[38;5;241m-\u001B[39m \u001B[43mdef_sigma\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdef_aij_dmg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdef_aij_baseline\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;241m1\u001B[39m \u001B[38;5;241m-\u001B[39m rho\n",
-      "Input \u001B[1;32mIn [190]\u001B[0m, in \u001B[0;36mdef_sigma\u001B[1;34m(def_sigma_dmg, def_sigma_baseline)\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(def_sigma_dmg\u001B[38;5;241m.\u001B[39msize):\n\u001B[0;32m      7\u001B[0m     def_sigma_x \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msquare(def_sigma_dmg[i] \u001B[38;5;241m-\u001B[39m def_sigma_dmg_mean)\n\u001B[1;32m----> 8\u001B[0m     def_sigma_y \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msquare(\u001B[43mdef_sigma_baseline\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mdef_sigma_baseline_mean\u001B[49m)\n\u001B[0;32m      9\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m def_sigma_x \u001B[38;5;241m*\u001B[39m def_sigma_y\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "locate = \"20180605T150315_D9/pc_f100kHz.h5\"\n",
     "SHM_Data_baseline = def_get_array(SHM_Data_baseline_locate)\n",
@@ -501,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
