--- a/test.ipynb
+++ b/test.ipynb
@@ -2,40 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5, 2.0, 4.5, 8.0, 12.5]\n",
+      "<class 'list'>\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "import h5py\n",
-    "import math\n",
-    "import random\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import scipy.signal as signal\n",
-    "import scipy.stats as stats\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import invgamma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [],
-   "source": [
-    "SHM_Data_Locate = \"D://SHM-Data/\"\n",
-    "\n",
-    "locate1 = \"20180605T150315_D9/pc_f100kHz.h5\"\n",
-    "file1 = h5py.File(SHM_Data_Locate + locate1, 'r')\n",
-    "catch1 = file1['/pitchcatch/catch'][()]\n",
-    "\n",
-    "locate2 = \"20180604T164628_baseline_1/pc_f100kHz.h5\"\n",
-    "file2 = h5py.File(SHM_Data_Locate + locate2, 'r')\n",
-    "catch2 = file2['/pitchcatch/catch'][()]"
+    "data = [1,2,3,4,5]\n",
+    "def num_func(x):\n",
+    "    return x**2/2\n",
+    "print(list(map(num_func,data)))\n",
+    "print(type(list(map(num_func,data))))"
    ],
    "metadata": {
     "collapsed": false,
@@ -46,28 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# 板子的大小\n",
-    "plant_size = [500, 500]\n",
-    "\n",
-    "# 12组传感器的xy坐标\n",
-    "sensor_locate = np.array([[450, 470], [370, 470], [290, 470], [210, 470], [130, 470], [50, 470], [450, 30], [370, 30], [290, 30], [210, 30], [130, 30], [50, 30]])\n",
-    "\n",
-    "# 28个缺陷的位置\n",
-    "damage_locate = np.array([\n",
-    "    [50, 415], [65, 415], [50, 400], [65, 400],\n",
-    "    [250, 427], [265, 427], [250,412], [265, 412],\n",
-    "    [180, 345], [195, 345], [180,330], [195, 345],\n",
-    "    [320, 275], [335, 275], [320, 260], [335, 275],\n",
-    "    [130, 195], [145, 195], [130, 180], [130, 180],\n",
-    "    [435, 205], [450, 205], [435, 190], [450, 190],\n",
-    "    [250, 90], [265, 90], [250, 75], [265, 75]\n",
-    "])\n",
-    "\n",
-    "# 因子B\n",
-    "b = 1.05"
+    "from functools import reduce\n",
+    "def num_add(a,b):\n",
+    "    return a+b\n",
+    "data = [1,2,3,4,5]\n",
+    "print(reduce(num_add,data))\n",
+    "print(type(reduce(num_add,data)))"
    ],
    "metadata": {
     "collapsed": false,
@@ -78,77 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [
-    "def aij(aij_catch1, aij_catch2):\n",
-    "    mu1 = aij_catch1.mean()\n",
-    "    mu2 = aij_catch2.mean()\n",
-    "    k = aij_catch1.size\n",
-    "    cxy = 0\n",
-    "    for i in range(k):\n",
-    "        cxy += (aij_catch1[i] - mu1) * (aij_catch2[i] - mu2)\n",
-    "    sigmax = 0\n",
-    "    sigmay = 0\n",
-    "    for i in range(k):\n",
-    "        sigmax += np.square(aij_catch1[i] - mu1)\n",
-    "        sigmay += np.square(aij_catch2[i] - mu2)\n",
-    "    sigmaxy = np.sqrt(sigmax) * np.sqrt(sigmay)\n",
-    "    rho = cxy / sigmaxy\n",
-    "    return 1 - rho"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100]\n",
+      "<class 'list'>\n"
+     ]
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def RDij(i, j, locate):\n",
-    "    locate_i = sensor_locate[i]\n",
-    "    locate_j = sensor_locate[j]\n",
-    "    RD_ij = (np.sqrt(np.square(locate[0] - locate_i[0]) + np.square(locate[1] - locate_i[1])) + np.sqrt(np.square(locate[0] - locate_j[0]) + np.square(locate[1] - locate_j[1]))) / np.sqrt(np.square(locate_i[0] - locate_j[0]) + np.square(locate_i[1] - locate_j[1]))\n",
-    "    return RD_ij"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
-    "def Rij(i, j, locate):\n",
-    "    RD_ij = RDij(i, j, locate)\n",
-    "    if RD_ij < b:\n",
-    "        return RD_ij\n",
-    "    else:\n",
-    "        return b"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
-   "source": [
-    "catch1_1_12 = catch1[10, :]\n",
-    "catch2_1_12 = catch2[10, :]\n",
-    "aij_12 = aij(catch1_1_12, catch2_1_12)"
+    "def more_than_15(x):\n",
+    "    return x > 15\n",
+    "data = [1,10,100]\n",
+    "print(list(filter(more_than_15,data)))\n",
+    "print(type(list(filter(more_than_15,data))))"
    ],
    "metadata": {
     "collapsed": false,
