--- a/MCMC method with RAPID fix for loop.ipynb
+++ b/MCMC method with RAPID fix for loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# 一些全局变量，放在这里好设置\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "# 使用连续小波变换获取ToF时间\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 778,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "def def_get_array(def_get_locate):\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 779,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "# 对所有catch信号获取ToF时间，返回选中的几组\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 780,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "def def_ri(def_ri_select, def_ri_x, def_ri_y):\n",
@@ -197,56 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 781,
-   "outputs": [],
-   "source": [
-    "def def_cxy(def_cxy_dmg, def_cxy_baseline):\n",
-    "    # print(\"def_cxy\", def_cxy_dmg, def_cxy_baseline)\n",
-    "    def_cxy_dmg_mean = def_cxy_dmg.mean()\n",
-    "    def_cxy_baseline_mean = def_cxy_baseline.mean()\n",
-    "    def_cxy_count = 0\n",
-    "    for i in range(def_cxy_dmg.size):\n",
-    "        def_cxy_count += (def_cxy_dmg[i] - def_cxy_dmg_mean) * (def_cxy_baseline[i] - def_cxy_baseline_mean)\n",
-    "    return def_cxy_count"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 782,
-   "outputs": [],
-   "source": [
-    "def def_sigma(def_sigma_dmg, def_sigma_baseline):\n",
-    "    # print(\"def_sigma\", def_sigma_dmg, def_sigma_baseline)\n",
-    "    def_sigma_dmg_mean = def_sigma_dmg.mean()\n",
-    "    def_sigma_baseline_mean = def_sigma_baseline.mean()\n",
-    "    def_sigma_x = 0\n",
-    "    def_sigma_y = 0\n",
-    "    for i in range(def_sigma_dmg.size):\n",
-    "        def_sigma_x += np.square(def_sigma_dmg[i] - def_sigma_dmg_mean)\n",
-    "        def_sigma_y += np.square(def_sigma_baseline[i] - def_sigma_baseline_mean)\n",
-    "    return np.sqrt(def_sigma_x) * np.sqrt(def_sigma_y)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "def def_aij(def_aij_dmg, def_aij_baseline):\n",
-    "    # print(\"def_aij\", def_aij_dmg, def_aij_baseline)\n",
-    "    rho = def_cxy(def_aij_dmg, def_aij_baseline) / def_sigma(def_aij_dmg, def_aij_baseline)\n",
+    "    def_aij_cxy = 0\n",
+    "    def_aij_sigma_x = 0\n",
+    "    def_aij_sigma_y = 0\n",
+    "    def_aij_dmg_mean = def_aij_dmg.mean()\n",
+    "    def_aij_baseline_mean = def_aij_baseline.mean()\n",
+    "    for i in range(def_aij_dmg.size):\n",
+    "        def_aij_cxy += (def_aij_dmg[i] - def_aij_dmg_mean) * (def_aij_baseline[i] - def_aij_baseline_mean)\n",
+    "        def_aij_sigma_x += np.square(def_aij_dmg[i] - def_aij_dmg_mean)\n",
+    "        def_aij_sigma_y += np.square(def_aij_baseline[i] - def_aij_baseline_mean)\n",
+    "    def_aij_sigma = np.sqrt(def_aij_sigma_x) * np.sqrt(def_aij_sigma_y)\n",
+    "    rho = def_aij_cxy / def_aij_sigma\n",
     "    return 1 - rho"
    ],
    "metadata": {
@@ -258,13 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def fuc_rapid_pdf2(fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select):\n",
     "    # print(\"fuc_rapid_pdf2\", fuc_rapid_pdf2_array, fuc_rapid_pdf2_num, fuc_rapid_pdf2_select)\n",
     "    fuc_rapid_pdf2_pdf = np.zeros(plant_size)\n",
-    "    print(fuc_rapid_pdf2_num)\n",
+    "    #print(fuc_rapid_pdf2_num)\n",
     "    fuc_rapid_pdf2_dmg = fuc_rapid_pdf2_array[int(fuc_rapid_pdf2_num), 0:lr]\n",
     "    fuc_rapid_pdf2_baseline = SHM_Data_baseline[int(fuc_rapid_pdf2_num), 0:lr]\n",
     "    fuc_rapid_pdf2_aij = def_aij(fuc_rapid_pdf2_dmg, fuc_rapid_pdf2_baseline)\n",
@@ -283,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "def fuc_rapid_pdf(fuc_rapid_pdf_array):\n",
@@ -310,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 786,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "# 先验概率密度函数之比\n",
@@ -335,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 787,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "# 计算理论与实际的误差\n",
@@ -358,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 788,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "# 返回符合逆伽马分布的随机数\n",
@@ -375,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "# MCMC方法本体\n",
@@ -428,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "def def_plot_fig(def_pf_theta, def_pf_title):\n",
@@ -483,46 +448,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 791,
+   "execution_count": 30,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "2.0\n",
-      "4.0\n",
-      "5.0\n",
-      "8.0\n",
-      "10.0\n",
-      "12.0\n",
-      "14.0\n",
-      "15.0\n",
-      "18.0\n",
-      "20.0\n",
-      "31.0\n",
-      "32.0\n",
-      "35.0\n",
-      "37.0\n",
-      "45.0\n",
-      "48.0\n",
-      "50.0\n",
-      "53.0\n",
-      "55.0\n",
-      "64.0\n"
-     ]
-    },
-    {
      "ename": "IndexError",
-     "evalue": "index 523 is out of bounds for axis 0 with size 500",
+     "evalue": "index 509 is out of bounds for axis 0 with size 500",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [791]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      2\u001B[0m SHM_Data_baseline \u001B[38;5;241m=\u001B[39m def_get_array(SHM_Data_baseline_locate)\n\u001B[0;32m      4\u001B[0m tof, dmg_array \u001B[38;5;241m=\u001B[39m def_multi_tof(locate)\n\u001B[1;32m----> 5\u001B[0m theta \u001B[38;5;241m=\u001B[39m \u001B[43mdef_mcmc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdmg_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtof\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m def_plot_fig(theta, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[180, 345], [10, 10]\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "Input \u001B[1;32mIn [789]\u001B[0m, in \u001B[0;36mdef_mcmc\u001B[1;34m(def_mcmc_array, def_mcmc_tof)\u001B[0m\n\u001B[0;32m     19\u001B[0m theta_2 \u001B[38;5;241m=\u001B[39m def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m LK[\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m*\u001B[39m (\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom() \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m     20\u001B[0m theta_k \u001B[38;5;241m=\u001B[39m [theta_1, def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m]]\n\u001B[1;32m---> 21\u001B[0m alpha \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf_pdf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtheta_k\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     22\u001B[0m r \u001B[38;5;241m=\u001B[39m alpha \u001B[38;5;241m*\u001B[39m math\u001B[38;5;241m.\u001B[39mexp(\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m0.5\u001B[39m \u001B[38;5;241m*\u001B[39m fuc_ig(def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m], def_mcmc_tof) \u001B[38;5;241m*\u001B[39m (fuc_q(theta_k, def_mcmc_tof) \u001B[38;5;241m-\u001B[39m fuc_q([def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m0\u001B[39m], def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m]], def_mcmc_tof)))\n\u001B[0;32m     23\u001B[0m R \u001B[38;5;241m=\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom()\n",
-      "Input \u001B[1;32mIn [786]\u001B[0m, in \u001B[0;36mfuc_p\u001B[1;34m(fuc_p_pdf_pdf, fuc_p_theta1, fuc_p_theta2)\u001B[0m\n\u001B[0;32m      7\u001B[0m fuc_p_y2 \u001B[38;5;241m=\u001B[39m fuc_p_theta2[\u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# print(fuc_p_x1, fuc_p_y1)\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m fuc_p1 \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p_pdf_pdf\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mfuc_p_x1\u001B[49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m[\u001B[38;5;28mint\u001B[39m(fuc_p_y1)]\n\u001B[0;32m     10\u001B[0m fuc_p2 \u001B[38;5;241m=\u001B[39m fuc_p_pdf_pdf[\u001B[38;5;28mint\u001B[39m(fuc_p_x2)][\u001B[38;5;28mint\u001B[39m(fuc_p_y2)]\n\u001B[0;32m     11\u001B[0m fuc_pp \u001B[38;5;241m=\u001B[39m fuc_p1 \u001B[38;5;241m/\u001B[39m fuc_p2\n",
-      "\u001B[1;31mIndexError\u001B[0m: index 523 is out of bounds for axis 0 with size 500"
+      "Input \u001B[1;32mIn [30]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      2\u001B[0m SHM_Data_baseline \u001B[38;5;241m=\u001B[39m def_get_array(SHM_Data_baseline_locate)\n\u001B[0;32m      4\u001B[0m tof, dmg_array \u001B[38;5;241m=\u001B[39m def_multi_tof(locate)\n\u001B[1;32m----> 5\u001B[0m theta \u001B[38;5;241m=\u001B[39m \u001B[43mdef_mcmc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdmg_array\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtof\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      7\u001B[0m def_plot_fig(theta, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[180, 345], [10, 10]\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "Input \u001B[1;32mIn [28]\u001B[0m, in \u001B[0;36mdef_mcmc\u001B[1;34m(def_mcmc_array, def_mcmc_tof)\u001B[0m\n\u001B[0;32m     19\u001B[0m theta_2 \u001B[38;5;241m=\u001B[39m def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m LK[\u001B[38;5;241m1\u001B[39m] \u001B[38;5;241m*\u001B[39m (\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m*\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom() \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m     20\u001B[0m theta_k \u001B[38;5;241m=\u001B[39m [theta_1, def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m]]\n\u001B[1;32m---> 21\u001B[0m alpha \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfuc_rapid_pdf_pdf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtheta_k\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mdef_theta\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     22\u001B[0m r \u001B[38;5;241m=\u001B[39m alpha \u001B[38;5;241m*\u001B[39m math\u001B[38;5;241m.\u001B[39mexp(\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m0.5\u001B[39m \u001B[38;5;241m*\u001B[39m fuc_ig(def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m], def_mcmc_tof) \u001B[38;5;241m*\u001B[39m (fuc_q(theta_k, def_mcmc_tof) \u001B[38;5;241m-\u001B[39m fuc_q([def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m0\u001B[39m], def_theta[i \u001B[38;5;241m-\u001B[39m \u001B[38;5;241m1\u001B[39m][\u001B[38;5;241m1\u001B[39m]], def_mcmc_tof)))\n\u001B[0;32m     23\u001B[0m R \u001B[38;5;241m=\u001B[39m random\u001B[38;5;241m.\u001B[39mrandom()\n",
+      "Input \u001B[1;32mIn [25]\u001B[0m, in \u001B[0;36mfuc_p\u001B[1;34m(fuc_p_pdf_pdf, fuc_p_theta1, fuc_p_theta2)\u001B[0m\n\u001B[0;32m      7\u001B[0m fuc_p_y2 \u001B[38;5;241m=\u001B[39m fuc_p_theta2[\u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m# print(fuc_p_x1, fuc_p_y1)\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m fuc_p1 \u001B[38;5;241m=\u001B[39m \u001B[43mfuc_p_pdf_pdf\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mfuc_p_x1\u001B[49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m[\u001B[38;5;28mint\u001B[39m(fuc_p_y1)]\n\u001B[0;32m     10\u001B[0m fuc_p2 \u001B[38;5;241m=\u001B[39m fuc_p_pdf_pdf[\u001B[38;5;28mint\u001B[39m(fuc_p_x2)][\u001B[38;5;28mint\u001B[39m(fuc_p_y2)]\n\u001B[0;32m     11\u001B[0m fuc_pp \u001B[38;5;241m=\u001B[39m fuc_p1 \u001B[38;5;241m/\u001B[39m fuc_p2\n",
+      "\u001B[1;31mIndexError\u001B[0m: index 509 is out of bounds for axis 0 with size 500"
      ]
     },
     {
